[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/Grounded.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Flippable.gd" type="Script" id=2]
[ext_resource path="res://Enemies/HurtAnim.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/CriticalSpark.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 800, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 20 )

[sub_resource type="Animation" id=3]
resource_name = "critical"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 6, 6, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GroundedEnemy" type="KinematicBody2D"]
z_index = 1
collision_layer = 8
collision_mask = 16
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="HurtArea" type="Area2D" parent="."]

[node name="TurnTimer" type="Timer" parent="."]
one_shot = true

[node name="WalkTimer" type="Timer" parent="."]
one_shot = true

[node name="Controller" type="Node" parent="."]

[node name="Flippable" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Visibility" type="Area2D" parent="Flippable"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flippable/Visibility"]
shape = SubResource( 1 )

[node name="EdgeDetect" type="Area2D" parent="Flippable"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flippable/EdgeDetect"]
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="Flippable"]

[node name="CriticalAnim" type="AnimationPlayer" parent="."]
anims/critical = SubResource( 3 )

[node name="HurtAnim" parent="." instance=ExtResource( 3 )]

[node name="CriticalSpark" parent="." instance=ExtResource( 4 )]

[node name="Alert" type="AudioStreamPlayer2D" parent="."]

[node name="Hit" type="AudioStreamPlayer2D" parent="."]

[node name="Death" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="TurnTimer" to="." method="turn"]
[connection signal="timeout" from="WalkTimer" to="." method="start_walk"]
